--- a/kck/lab2/Untitled0.ipynb
+++ b/kck/lab2/Untitled0.ipynb
@@ -11,12 +11,17 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "run main.py"
+      "from sympy.interactive import printing\n",
+      "printing.init_printing(use_latex=True)\n",
+      "import sympy as sym\n",
+      "# Definicje zmiennych\n",
+      "x, y = sym.symbols(\"x y\")\n",
+      "\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 219
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
